# vocab-logger

./: README.md  pyproject.toml
src/vocab/: cli.py  lookup.py  models.py  storage.py
tests/: test_cli.py  test_models.py  test_storage.py
