[project]
name = "vocab-logger"
version = "0.1.0"
description = "Vocabulary logger and quizzer for Chinese language learners"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.41.0",
    "rich>=15.0.0",
    "typer[all]>=0.26.7",
]

[project.scripts]
vocab = "vocab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vocab"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
