[project]
name = "vocab-logger"
version = "0.1.0"
description = "Vocabulary logger and quizzer for Chinese language learners"
requires-python = ">=3.9"
dependencies = [
    "openai>=2.41.0",
    "rich>=15.0.0",
    "typer>=0.9.0",
]

[project.scripts]
vocab = "vocab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vocab"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
